Refactor user handler to use centralized error response handling
- Updated RegisterUser, GetAllUsers, GetUserByID, GetUserByUsername, and GetUserByEmail methods to utilize response.WriteAPIError for error handling.
- Simplified success responses using response.WriteAPISuccess.

Enhance user repository to support multi-tenancy

- Modified NewUsersRepository to accept a gym repository for dependency injection.
- Implemented dynamic table name resolution based on gym domain in CreateUser, GetUserByID, GetUserByUsername, GetUserByEmail, GetAllUsers, UpdateUser, UpdatePassword, DeleteUser, and VerifyUser methods.

Add authentication middleware for JWT validation and authorization

- Created AuthMiddleware to handle JWT token validation and user authorization based on roles and gym access.
- Introduced context keys for user ID, type, and role to facilitate access control in handlers.
